# Star-Trek-Explorers

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  pom.xml  setup.sh  tear_down.sh
.github/workflows/: action.yml  dotnet.yml  rust.yml
Star-Trek-Game/StarTrek/: Program.cs
Star-Trek-Game/StarTrekTests/: StarTrekTests.csproj
StarTrek/: Program.cs
StarTrek/Controllers/: MapGenerator.cs  MoonGenerator.cs  PlanetGenerator.cs  StarSystemGenerator.cs
StarTrek/Display/: GenericDisplayHelper.cs  GenericInputHelper.cs  GenericOutputHelper.cs  UserDisplay.cs
StarTrek/Starships/: Starship.cs
StarTrek/States/: AwayMissionState.cs  CharacterCreationState.cs  GalaxyMapState.cs  GameState.cs  GenerateGalaxyState.cs  NewGameState.cs  PlanetaryMapState.cs  StarSystemMapState.cs  StarshipCreationState.cs
StarTrek/World/: GalaxyWorldMap.cs  WorldMap.cs
StarTrekExplorers/: Program.cs  StarTrekExplorers.csproj
StarTrekExplorers/Entities/: AiShip.cs  Game.cs  IShip.cs  PlayerShip.cs  Ship.cs  (+1 more)
StarTrekExplorersTests/: StarTrekExplorersTests.csproj
asserters/: assert_equal.go
controllers/: calculation.go  calculation_test.go
entities/: game.go  game_test.go  player_ship.go  player_ship_test.go
presenters/: combat_presenter.go  exploration_presenter.go  presenter.go  ship_presenter.go
src/: assests.rs  components.rs  controllers.rs  displayer.rs  entities.rs  factories.rs  game.rs  game_randomiser.rs  main.rs  models.rs  names.rs  presenters.rs  ship.rs  states.rs  systems.rs  universe.rs  world.rs
systems/: combat.go  combat_test.go  exploration.go
(+432 files in other folders)
