[package]
name = "star_trek_explorers"
version = "0.1.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Steelstone3/Star-Trek-Explorers"
repository = "https://github.com/Steelstone3/Star-Trek-Explorers"
license = "GPLv3"
readme = "README.md"
include = [

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.3.0"
rand="0.8.5"
rand_derive2 ="0.1.17"