[package]
name = "star_trek_explorers"
version = "0.1.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Star-Trek-Explorers"
repository = "https://github.com/Steelstone3/Star-Trek-Explorers"
license = "GPLv3"
readme = "README.md"
include = [

]

[build-dependencies]

[dev-dependencies]

[dependencies]
bevy="0.9"

[profile.dev]
#opt-level = 1